--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skyscanner Frontend Recruitment Test</title>
+    <title>Skyscanner Full-Stack Recruitment Test</title>
   </head>
   <body>
     <div id="root"></div>
@@ -14,7 +14,7 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` in this folder.
+      To begin the development, run `npm run client` in the root folder.
       To create a production bundle, use `npm run build`.
     -->
   </body>
